--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
       <!-- input form -->
       <form id="send-location" action="" method="GET">
-        <input type="text" id="new-location" name="new-location" placeholder="Where are you going today?">
+        <label for="send-location" class='middle'>WHERE ARE YOU?</label>
+        <input type="text" id="new-location" name="new-location" placeholder="ex. New York, NY">
         <input type="submit" id="submit" value="Tell me what to wear">
       </form>
 
