--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <div class="main">
       <h1>BRING A JACKET</h1>
 
-      <!-- input form -->
+      <!-- Input form -->
       <form id="send-location" action="" method="GET">
         <label for="send-location" class='middle'>WHERE ARE YOU?</label>
         <input type="text" id="new-location" name="new-location" placeholder="ex. New York, NY">
         <input type="submit" id="submit" value="Tell me what to wear">
       </form>
 
-      <!-- Responses -->
+      <!-- Response -->
       <div id="result">
       </div>
 
